data/derived/fa15/progs/unify/prog1766.ml.out
Characters 141-152:
  |h::t->(h,(List.hd t)::c)) in
            ^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
